Collection repo + tests update